# HywelStarVideoPlayer

./: .gitignore  CMakeLists.txt  README.md  build.bat  build_android.bat  build_windows.bat  build_windows.ps1  deploy_windows.bat  env.local.example.bat  package_portable.bat
android/: AndroidManifest.xml
android/res/values/: strings.xml
cmake/: FindGStreamer.cmake
cmake/find-modules/: FindGStreamer.cmake
docs/: ANDROID_BUILD.md  BUILD_ENVIRONMENTS.md  README.md  WINDOWS_BUILD.md
resources/: resources.qrc
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/core/: ConfigManager.cpp  ConfigManager.h  GStreamerEngine.cpp  GStreamerEngine.h  RecordingManager.cpp  RecordingManager.h
src/ui/: AboutDialog.cpp  AboutDialog.h  ControlBar.cpp  ControlBar.h  QuickConnectBar.cpp  QuickConnectBar.h  SettingsDialog.cpp  SettingsDialog.h  StatusBar.cpp  StatusBar.h  VideoDisplayWidget.cpp  VideoDisplayWidget.h
src/utils/: Logger.cpp  Logger.h  StreamParser.cpp  StreamParser.h
